--- a/euro/static/euro/style.css
+++ b/euro/static/euro/style.css
@@ -65,6 +65,9 @@ h1, h2, h3, h4 {
   position: relative;
   margin-bottom:15px;
 }
+.score {
+    width:40px;
+}
 .form-control{
   width:100%;
   height:50px;
