--- a/euro/static/euro/style.css
+++ b/euro/static/euro/style.css
@@ -14,6 +14,7 @@
 }
 
 .main {
+    margin-top: 60px;
     margin-left: 40px;
     margin-right: 40px;
 }
@@ -143,3 +144,15 @@ h1, h2, h3, h4 {
   border:none;
   @include border-radius(4px);
 }
+
+
+.marged{
+    margin-top: 10px;
+}
+
+
+  ul.nav-pills {
+      top: 100px;
+      position: fixed;
+  }
+  
