--- a/euro/templates/euro/index.html
+++ b/euro/templates/euro/index.html
@@ -1,25 +1,37 @@
-{% extends 'euro/base.html' %}
-{% load static %}
-{% block content %}
-{% if latest_rencontre_list %}
+{% extends 'euro/base.html' %} 
+{% load static %} {% block content %} 
+{% if latest_rencontre_list %} 
+
+<div class="panel-group" id="accordionTag">
 {% for ctag in latest_rencontre_list %}
-<div class="panel panel-default">
-  <div class="panel-heading"><span class="date-match">{{ctag.name}}</span></div>
-    
-  <div class="panel-body">
-{% for rencontre in ctag.rencontre_set.all %}
-<div class="well well">
-    <img src="{% static 'euro/flags/' %}{{rencontre.pays1.icone}}.png" alt="{{rencontre.pays1}}" />
-    <span class='pays'>{{rencontre.pays1}}</span>
-    <input class="score entry" type="number" />
-    <span class="date-match">{{rencontre.date}}</span>
-    <input class="score entry" type="number" />
-    <span class='pays'>{{rencontre.pays2}}</span>
-    <img src="{% static 'euro/flags/' %}{{rencontre.pays2.icone}}.png" alt="{{rencontre.pays2}}" /> &nbsp;
-</div>
-    
+
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+        <a data-toggle="collapse" href="#collapse{{forloop.counter}}" data-parent="#accordionTag"><span class="date-match">{{ctag.name}}</span></a>
+      </h4>
+        </div>
+        <div id="collapse{{forloop.counter}}" class="panel-collapse collapse {% if forloop.first %}in{% endif %}">
+            <div class="panel-body">
+                {% for rencontre in ctag.rencontre_set.all %}
+                <div class="well well">
+                    <img src="{% static 'euro/flags/' %}{{rencontre.pays1.icone}}.png" alt="{{rencontre.pays1}}" />
+                    <span class='pays'>{{rencontre.pays1}}</span>
+                    <input class="score entry" type="number" />
+                    <span class="date-match">{{rencontre.date}}</span>
+                    <input class="score entry" type="number" />
+                    <span class='pays'>{{rencontre.pays2}}</span>
+                    <img src="{% static 'euro/flags/' %}{{rencontre.pays2.icone}}.png" alt="{{rencontre.pays2}}" /> &nbsp;
+                </div>
+
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
 {% endfor %}
-      </div></div>
-{% endfor %} {% else %}
+</div>
+{% else %}
 <p>No polls are available.</p>
 {% endif %} {% endblock content %}
