--- a/euro/static/euro/style.css
+++ b/euro/static/euro/style.css
@@ -155,4 +155,12 @@ h1, h2, h3, h4 {
       top: 100px;
       position: fixed;
   }
+
+.col-sm-9 {
+    width: 80%;
+}
+
+.col-sm-3 {
+    width: 20%;
+}
   
