--- a/euro/templates/euro/home.html
+++ b/euro/templates/euro/home.html
@@ -1,39 +1,46 @@
 {% extends 'euro/base.html' %} 
-{% load static %}
 {% load extra_euro %}
+{% load static %}
 {% block content %} 
+
+
+<h1>Total Points <span class="label label-warning">{{user.points}}</span></h1>
+<br/>
 {% if latest_rencontre_list %} 
+<h2>Prochains matchs:</h2>
+<div class="col-sm-9">
+        {% for date in latest_rencontre_date %}
+        <div class="marged">
+        <div class="panel panel-default" id="section{{forloop.counter}}">
+            <div class="panel-heading">
+                <span class="date-match">{{date |  date:'l d F Y'}}</span>
+            </div>
 
-<div class="panel-group" id="accordionTag">
-{% for ctag in latest_rencontre_list %}
-
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-        <a data-toggle="collapse" href="#collapse{{forloop.counter}}" data-parent="#accordionTag"><span class="date-match">{{ctag.name}}</span></a>
-      </h4>
-        </div>
-        <div id="collapse{{forloop.counter}}" class="panel-collapse collapse {% if forloop.first %}in{% endif %}">
             <div class="panel-body">
-                {% for rencontre in ctag.rencontre_set.all %}
-                <div class="well well">
+
+                {% for rencontre in latest_rencontre_list %} 
+                {% if rencontre.date == date %}
+
+                <div class="well">
                     <img src="{% static 'euro/flags/' %}{{rencontre.pays1.icone}}.png" alt="{{rencontre.pays1}}" />
                     <span class='pays'>{{rencontre.pays1}}</span>
                     <input class="score entry" type="number" id="score{{rencontre.id}}_1" min="0" value="{{pronostics|score1:rencontre}}"/>
-                    <span class="date-match">{{rencontre.date}}</span>
+                    
                     <input class="score entry" type="number" id="score{{rencontre.id}}_2" min="0" value="{{pronostics|score2:rencontre}}"/>
                     <span class='pays'>{{rencontre.pays2}}</span>
                     <img src="{% static 'euro/flags/' %}{{rencontre.pays2.icone}}.png" alt="{{rencontre.pays2}}" /> &nbsp;
+                    
                 </div>
-
+                {% endif %} 
                 {% endfor %}
             </div>
-        </div>
-    </div>
 
-{% endfor %}
-</div>
+        </div>
+        </div>
+    
+
+    {% endfor %}
+        </div>
 {% else %}
 <p>No polls are available.</p>
 {% endif %} {% endblock content %}
