listen to signal for resultat + display points by member

--- a/euro/templates/euro/home.html
+++ b/euro/templates/euro/home.html
@@ -4,7 +4,7 @@
 {% block content %} 
 
 
-<h1>Total Points <span class="label label-warning">{{user.points}}</span></h1>
+<h1>Total Points <span class="label label-warning">{{user.pts}}</span></h1>
 <br/>
 {% if latest_rencontre_list %} 
 <h2>Prochains matchs:</h2>
